k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: counter-service
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: counter-service
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
